# jiri-nguyen-blog

./: .gitignore  statichost.yml
posts/: write-better-python-code-faster-with-type-hints.md
website/: Cargo.toml  Justfile  README.md  styles.css  test_templates.sh
website/public/: robots.txt
website/src/: main.rs
website/templates/: base.html  blog.html  index.html  opensource.html  post.html  sitemap.xml  terms.html
