[package]
name = "ssg"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
minijinja = "2.5"
markdown = "1.0.0-alpha.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gray_matter = "0.2"
chrono = "0.4"
walkdir = "2.5"
anyhow = "1.0"
syntect = "5.2"
regex = "1.11"
slug = "0.1"
